--- a/Labs/CH10/ToDoApp/ToDoApp/appsettings.json
+++ b/Labs/CH10/ToDoApp/ToDoApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ToDoContext": "Server=(localdb)\\mssqllocaldb;Database=ToDoApp.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
