--- a/FinalProject/S3FinalV2/S3FinalV2/S3FinalV2.csproj
+++ b/FinalProject/S3FinalV2/S3FinalV2/S3FinalV2.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Area\" />
+    <Folder Include="Areas\Admin\Models\" />
   </ItemGroup>
 
 </Project>
