--- a/FinalProject/S3FinalV2/S3FinalV2/S3FinalV2.csproj
+++ b/FinalProject/S3FinalV2/S3FinalV2/S3FinalV2.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Azure.Core" Version="1.38.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.11" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.11" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.11" />
